syntax = "proto3";

package mockPayment;

option go_package = ".;mockPayment";

service PaymentService {
  rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string provider_name = 1;
  string amount = 2;           // "100500.0 USD"
  string date = 3;
}

message PaymentResponse {
  bool accepted = 1;
  int64 id = 2;
  string message = 3;        
}